@@ -9,6 +9,9 @@
 # 2010-09-19 Version 0.1
 
 import os
+import hashlib
+import datetime
+import time
 
 from gettext import gettext as _
 
@@ -64,6 +67,7 @@ class ShotwellPhotoList(FSpotPhotoList):
                  'filename' : filename,
                  'title' : title or os.path.basename(filename), # without path
                  'id' : id,
+                 'version' : version,
                  'fav' : ShotwellFav(rate.name, id, self.rate_list),
                  'trash': ShotwellTrash(self.photolist) }
 
@@ -90,7 +94,9 @@ class ShotwellTrash(FSpotTrash):
         db.commit()
         db.close()
 
-    def _get_sql_obj(self, version):
+    def _get_sql_obj(self, photo):
+        version =  photo.get('version')
+
         if version == -1:
             sql_templates = [ 
                 "DELETE FROM PhotoTable WHERE id=$id;" ]
@@ -99,9 +105,17 @@ class ShotwellTrash(FSpotTrash):
                 "DELETE FROM BackingPhotoTable WHERE id=$version;", 
                 "UPDATE PhotoTable SET editable_id=-1 WHERE id=$id;" ]
 
+
+        filename = photo.get('filename')
+        tombstone_value = self._get_tombstone_values(filename)
+        sql_templates.append("INSERT INTO TombstoneTable "
+                             "(filepath, filesize, md5, time_created) "
+                             "VALUES (%s)" % tombstone_value)
+
         # cache delete
+        id =  photo.get('id')
         cache_path = os.path.join(os.environ['HOME'], '.shotwell/thumbs')
-        cache_file = "thumb%016x.jpg" % self.id
+        cache_file = "thumb%016x.jpg" % id
 
         for size in ['thumbs128', 'thumbs360']:
             fullpath = os.path.join(cache_path, size, cache_file)
@@ -110,6 +124,28 @@ class ShotwellTrash(FSpotTrash):
 
         db = ShotwellDB()
         return db, sql_templates
+
+    def _get_tombstone_values(self, file):
+        filesize = os.path.getsize(file)
+        md5 = self._get_md5sum(file)
+        time_created = self._get_timestamp()
+
+        value = "'%s', %s, '%s', %s" % (file, filesize, md5, time_created)
+        return value
+
+    def _get_md5sum(self, file):
+        f = open(file, 'rb')
+        content = f.read()
+        f.close()
+
+        m = hashlib.md5()
+        m.update(content)
+        md5sum = m.hexdigest()
+        return md5sum
+
+    def _get_timestamp(self):
+        d = datetime.datetime.today()
+        return int(time.mktime(d.timetuple()))
 
 class PhotoSourceShotwellUI(ui.PhotoSourceUI):
 
